--- a/CourseServer/src/main/resources/application.properties
+++ b/CourseServer/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/courses
+spring.datasource.username=root
+spring.datasource.password=1qaz2wsx@
+
+spring.jpa.hibernate.ddl-auto=update
